objects/Sync_Table__mdt.object
<CustomObject><fields>
        <fullName>SQL_Index_Field__c</fullName>
        <label>SQL Index Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>SQL_Table__c</fullName>
        <label>SQL Table</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Salesforce_Index_Field__c</fullName>
        <label>Salesforce Index Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Salesforce_Table__c</fullName>
        <label>Salesforce Table</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><label>Sync Table</label><pluralLabel>Sync Tables</pluralLabel><visibility>Public</visibility></CustomObject>